Testing more stuff

--- a/html/loops.html
+++ b/html/loops.html
@@ -18,10 +18,28 @@
       </ul>
     </div>
     <br>
+    <button onclick="myFunction2()">Test</button>
+    <h3>Contact information</h3>
     <div id="myList">
+    </div>
+
+    <div>
+      <button onclick="sortCards()">Sort Cards</button>
+      <ul id ="heartCards">
+
+      </ul>
+      <ul id ="cloverCards">
+
+      </ul>
+      <ul id ="spadeCards">
+
+      </ul>
+      <ul id ="diamondCards">
+
+      </ul>
 
     </div>
-    <button onclick="myFunction2()">Test</button>
+    <button onclick="sortHearts()">Sort Hearts</button>
 
     <script src="../javascript/loops.js"></script>
   </body>
